--- a/Proyecto/Ahorcado.html
+++ b/Proyecto/Ahorcado.html
@@ -14,7 +14,7 @@
             <h1>
                <center>Ahorcado</center> 
             </h1>
-            <form class="letras">
+            <form>
                 <label for="texto1"></label>
                 <label for="texto2"></label>
                 <label for="texto3"></label>
@@ -23,12 +23,12 @@
                 <label for="texto6"></label>
 
 
-                <input type="text" id="texto1" name="texto1" maxlength="1">
-                <input type="text" id="texto2" name="texto2" maxlength="1">
-                <input type="text" id="texto3" name="texto3" maxlength="1">
-                <input type="text" id="texto4" name="texto4" maxlength="1">
-                <input type="text" id="texto5" name="texto5" maxlength="1">
-                <input type="text" id="texto6" name="texto6" maxlength="1">
+                <input type="text" class="sinborde" id="texto1" name="texto1" maxlength="1" disabled=true>
+                <input type="text" class="sinborde" id="texto2" name="texto2" maxlength="1" disabled=true>
+                <input type="text" class="sinborde" id="texto3" name="texto3" maxlength="1" disabled=true>
+                <input type="text" class="sinborde" id="texto4" name="texto4" maxlength="1" disabled=true>
+                <input type="text" class="sinborde" id="texto5" name="texto5" maxlength="1" disabled=true>
+                <input type="text" class="sinborde" id="texto6" name="texto6" maxlength="1" disabled=true>
             </form>
             <h2>Escribe: </h2>
 
