--- a/Proyecto/Ahorcado.html
+++ b/Proyecto/Ahorcado.html
@@ -34,11 +34,11 @@
 
             <form>
                 <label for="texto">Texto:</label>
-                <input type="text" id="texto" name="texto">
+                <input type="text" id="texto" name="texto" maxlength="1">
                 <input type="button" value="Enviar">
             </form>
         </div>
     </div>
 </body>
-
+<script src="java.js">
 </html>
