--- a/Proyecto/Ahorcado.html
+++ b/Proyecto/Ahorcado.html
@@ -30,15 +30,15 @@
                 <input type="text" class="sinborde" id="texto5" name="texto5" maxlength="1" disabled=true>
                 <input type="text" class="sinborde" id="texto6" name="texto6" maxlength="1" disabled=true>
             </form>
-            <h2>Escribe: </h2>
+            <h1>Escribe: </h1>
 
             <form>
-                <label for="texto">Texto:</label>
-                <input type="text" id="texto" name="texto" maxlength="1">
-                <input type="button" value="Enviar">
+                <label for="texto" class="modificar">Texto:</label>
+                <input type="text" class="modificar" id="texto" name="texto" maxlength="1">
+                <input type="button" class="modificar"id="texto" value="Enviar">
             </form>
         </div>
     </div>
 </body>
-<script src="java.js">
+<script src="java.js"></script>
 </html>
